--- a/Android_Dev/Arivl/Application/src/main/res/layout/forgot_password.xml
+++ b/Android_Dev/Arivl/Application/src/main/res/layout/forgot_password.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,27 +11,29 @@
         android:id="@+id/login_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="17dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="31dp"
         android:gravity="center_horizontal"
-        android:text="Arivl Login"
+        android:text="Forgot Password"
         android:textColor="#fff"
         android:textSize="36sp"
         android:textStyle="bold" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="345dp"
-        android:layout_height="408dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_height="240dp"
+        android:layout_centerInParent="true"
         android:background="#fff"
         android:elevation="4dp"
-        android:orientation="vertical"
         android:padding="20dp">
+
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
             android:orientation="vertical"
             android:paddingTop="30dp">
 
@@ -41,13 +42,13 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/FirstNumEditText"
+                    android:id="@+id/Email"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/user"
                     android:drawableTint="@color/cyan_darken_3"
-                    android:hint="Phone number"
-                    android:inputType="number"
+                    android:hint="e.g johon@gamil.com"
+                    android:inputType="textEmailAddress"
                     android:singleLine="true" />
             </LinearLayout>
 
@@ -55,52 +56,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <EditText
-                    android:id="@+id/Pwrd"
-                    android:layout_width="fill_parent"
-                    android:layout_height="55dp"
-                    android:layout_marginTop="20dp"
-                    android:drawableLeft="@drawable/locked"
-                    android:drawableTint="@color/cyan_darken_3"
-                    android:hint="Password"
-                    android:inputType="textPassword"
-                    android:singleLine="true" />
-            </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:paddingTop="5dp"
-                android:text="Forgot Password?" />
+            </LinearLayout>
 
 
             <Button
-                android:id="@+id/Send"
+                android:id="@+id/ForgotPwrd"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="22dp"
                 android:background="@color/cyan_darken_3"
-                android:text="Login"
+                android:text="Submit"
                 android:textAllCaps="false"
                 android:textColor="#fff"
                 android:textSize="18sp" />
 
-            <Button
-                android:id="@+id/help"
-                android:layout_width="fill_parent"
-                android:layout_height="26dp"
-                android:layout_gravity="right"
-                android:layout_margin="22dp"
-                android:layout_marginTop="88dp"
-                android:background="@color/mwhite"
-                android:paddingTop="5dp"
-                android:text="Need help"
-                android:textAllCaps="false"
-                android:textColor="@color/mblack"
-                android:textSize="18sp" />
+
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
     <ImageButton
         android:id="@+id/user_profile_photo"
@@ -108,7 +81,7 @@
         android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="73dp"
+        android:layout_marginTop="87dp"
         android:background="@drawable/layout"
         android:elevation="4dp"
         android:src="@drawable/arivl_logo_round" />
