--- a/Android_Dev/Arivl/Application/src/main/res/layout/actionbar_indeterminate_progress.xml
+++ b/Android_Dev/Arivl/Application/src/main/res/layout/actionbar_indeterminate_progress.xml
@@ -14,10 +14,10 @@
   limitations under the License.
   -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_height="wrap_content"
-             android:layout_width="56dp"
-             android:minWidth="56dp">
-    <ProgressBar android:layout_width="32dp"
-                 android:layout_height="32dp"
+             android:layout_height="match_parent"
+             android:layout_width="match_parent"
+             >
+    <ProgressBar android:layout_width="200dp"
+                 android:layout_height="200dp"
                  android:layout_gravity="center"/>
 </FrameLayout>
