--- a/Android_Dev/Arivl/Application/src/main/res/layout/device_control.xml
+++ b/Android_Dev/Arivl/Application/src/main/res/layout/device_control.xml
@@ -2,8 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fulllogo"
+    android:background="@color/cyan_darken_3"
     >
+   <ImageView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:src="@drawable/fulllogo"/>
 
 
 </LinearLayout>
