Updated user interface

--- a/Web_Dev/homepage.css
+++ b/Web_Dev/homepage.css
@@ -1,26 +1,105 @@
-.background{
-	background-image: url("images/es.jpg");
-	height: 100vh;
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
+/* Google Fonts */
+@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
+ 
+/* Global */
+html, body {
+    min-height: 100vh;
+}
+/* 
+body {
+      height: calc(100vh - 8em);
+      padding: 4em;
+      color: rgba(255, 255, 255, 0.75);
+      font-family: 'Anonymous Pro', monospace;
+      background-color: rgb(25, 25, 25);
+}*/
+
+.about {
+	margin-top: 6rem;
 }
 
+.line {
+      position: relative;
+      top: 50%;
+      width: 17em;
+      margin: 0 auto;
+      border-right: 2px solid rgba(255, 255, 255, 0.75);
+      text-align: center;
+      white-space: nowrap;
+      overflow: hidden;transform: translateY(-50%);
+}
+ 
+/*Animation*/
+ 
+.anim-typewriter {
+      animation: typewriter 4s steps(40) 1s 1 normal both,
+      blinkTextCursor 500ms steps(40) infinite normal;
+}
+ 
+@keyframes typewriter {
+      from {
+            width: 0;
+      }
+      to {
+            width: 17em;
+      }
+}
+ 
+@keyframes blinkTextCursor {
+      from {
+            border-right-color: rgba(255, 255, 255, 0.75);
+      }
+      to {
+            border-right-color: transparent;
+      }
+}
 a.nav-btn {
 	background: none;
 	color: #fff;
 	border-radius: 4px;
 }
 
-h4{
-	font-family: 'Roboto', serif;
-}
 
 .tabs .indicator {
     position: absolute;
     bottom: 0;
     height: 2px;
-    background-color: yellowgreen !important;
+    background-color: #00838f  !important;
     will-change: left, right;
+}
+
+.tab {
+	color: #00838f !important;
+}
+
+.carousel {
+	height: 15rem !important;
+}
+
+.fas, .fab {
+	font-size: 30px;
+}
+
+
+.slider-img {
+	-webkit-filter: blur(3px);
+}
+
+.promotional-content {
+	font-size: 1.005rem !important;
+}
+
+#loading {
+	-webkit-animation: rotation 4s infinite linear;
+}
+
+@-webkit-keyframes rotation{ 100% {-webkit-transform: rotateY(360deg); } 
+}
+
+.page-footer {
+    position: relative !important;
+    left: 0 !important;
+    bottom: 0 !important;
+    width: 100%;
+    color: white;
 }
